fix essential chart layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: center;
-  display: flex;
+  display: grid;
+  grid-template-columns: 20% 60%;
+  grid-gap: 3em;
 }
 
 .App-logo {
-  height: 40vmin;
+  width: 100%;
 }
 
 .App-header {
@@ -42,8 +44,11 @@ li {
 }
 
 #chart {
+  display: grid;
   margin-left: 1em;
   padding-top: 1em;
+  grid-template-columns: 60% 40%;
+  grid-gap: 3em;
 }
 
 .chord-img {
@@ -69,8 +74,28 @@ input {
   font-size: 0.5em;
 }
 
-#chord-layouts {
-  display: inline-flex;
+#song-data {
+  height: 5em;
+}
+
+#song-title, #song-fave {
+  height: 1em;
+}
+
+#song-fave {
+  padding-left: 1em;
+}
+
+#section-content {
+  padding-left: 2em;
+  padding-top: 2em;
+}
+
+#section-chords {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 3em;
+  margin: 2em;
 }
 
 .chord-layout-name {
